unpackaged/main/default/objects/Customer_Invoice_Plan__c/Customer_Invoice_Plan__c.object-meta.xml
<CustomObject>
    <label>Customer Invoice Plan</label>
    <nameField>
        <label>Customer Invoice Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Invoice Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>