unpackaged/main/default/objects/Customer_Invoice_Plan__c/fields/Commitment_Rebate_Sum__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Rebate_Sum__c</fullName>
    <label>Commitment Rebate Sum</label>
    <summarizedField>Customer_Invoice_Plan_Line__c.Commitment_Rebate__c</summarizedField>
    <summaryForeignKey>Customer_Invoice_Plan_Line__c.Customer_Invoice_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>