unpackaged/main/default/objects/Customer_Invoice_Plan__c/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <label>Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Licence</fullName>
            </value>
            <value>
                <fullName>SaaS Platform</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>