unpackaged/main/default/objects/Customer_Invoice_Plan__c/fields/Include_Commitment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Include_Commitment_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this checkbox is true, include the quote lines with Fee Type = Commitment Fee in the invoice split</description>
    <label>Include Commitment Fee</label>
    <type>Checkbox</type>
</CustomField>