unpackaged/main/default/objects/Customer_Invoice_Plan__c/fields/Line_Count__c.field-meta.xml
<CustomField>
    <fullName>Line_Count__c</fullName>
    <description>For validation purpose.</description>
    <inlineHelpText>For validation purpose.</inlineHelpText>
    <label>Line Count</label>
    <summaryForeignKey>Customer_Invoice_Plan_Line__c.Customer_Invoice_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>