unpackaged/main/default/objects/Customer_Invoice_Plan__c/fields/Remainder_Line_Count__c.field-meta.xml
<CustomField>
    <fullName>Remainder_Line_Count__c</fullName>
    <description>This is a field to assist data quality validation which one plan should have maximum 1 line with Type = Remainder.</description>
    <inlineHelpText>This is a field to assist data quality validation which one plan should have maximum 1 line with Type = Remainder.</inlineHelpText>
    <label>Remainder Line Count</label>
    <summaryFilterItems>
        <field>Customer_Invoice_Plan_Line__c.Type__c</field>
        <operation>equals</operation>
        <value>Remainder</value>
    </summaryFilterItems>
    <summaryForeignKey>Customer_Invoice_Plan_Line__c.Customer_Invoice_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>