unpackaged/main/default/objects/Customer_Invoice_Plan__c/validationRules/AMS_Quote_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>AMS_Quote_Not_Allowed</fullName>
    <active>true</active>
    <description>Customer Invoice Plan cannot be link to a quote with ‘AMS’ as the deal type.</description>
    <errorConditionFormula>Quote__r.Deal_Type__c = &#39;AMS&#39;</errorConditionFormula>
    <errorDisplayField>Quote__c</errorDisplayField>
    <errorMessage>Customer Invoice Plan cannot be link to a quote with ‘AMS’ as the deal type.</errorMessage>
</ValidationRule>