unpackaged/main/default/objects/Customer_Invoice_Plan__c/validationRules/At_Least_One_Line_for_Active_Plan.validationRule-meta.xml
<ValidationRule>
    <fullName>At_Least_One_Line_for_Active_Plan</fullName>
    <active>true</active>
    <description>To activate the plan, please ensure there is at least one customer invoice plan line.</description>
    <errorConditionFormula>AND(
 Active__c = true,
  Line_Count__c = 0
)</errorConditionFormula>
    <errorMessage>To activate the plan, please ensure there is at least one customer invoice plan line.</errorMessage>
</ValidationRule>