unpackaged/main/default/objects/Customer_Invoice_Plan__c/validationRules/Max_One_Remainder_Line.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_One_Remainder_Line</fullName>
    <active>true</active>
    <description>One plan should have maximum 1 line with Type = Remainder.</description>
    <errorConditionFormula>Remainder_Line_Count__c &gt; 1</errorConditionFormula>
    <errorMessage>Each plan should have maximum one line of which Type is Remainder.</errorMessage>
</ValidationRule>